--- a/src/app/article-index-gallery/article-index-gallery.component.html
+++ b/src/app/article-index-gallery/article-index-gallery.component.html
@@ -39,15 +39,11 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
 
             <app-map-section></app-map-section>
             
-
-
             <app-speedometer-section></app-speedometer-section>
             
-
-            <app-battery-section></app-battery-section>
+            <app-new-battery></app-new-battery>
+           <!-- <app-battery-section></app-battery-section> --> 
             
-
-
 
 
         </div>
