Implementato service per batteria

--- a/src/app/map-section/map-section.component.html
+++ b/src/app/map-section/map-section.component.html
@@ -6,7 +6,7 @@
     <div id="mapdiv" class="col-sm-12"></div>
 
     <button id="setUp1"  (click)="move()">Logout</button>
-    <button  id="setUp" (click)="setUpMap()" onclick="setUp()">Click to start map</button>
+    <button  id="setUp" (click)="setUpMap()">Click to start map</button>
 
 </div>
 
