Separazione metodo Speedometer, aggiunta batteria, aggiunto volante

--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -1,6 +1,32 @@
 <head></head>
-<div class="col-sm-4">
-    <h1 id="lvlBattery" class="banner-font">Batteria</h1>
-    <div id="battery" class="fa coll-sm-6">
+<div class="col-sm-4 flex-column container">
+
+    <div class="row">
+
+        <h1 id="lvlBattery" class="banner-font">Batteria</h1>
+        <div id="battery" class="fa coll-sm-6">
+        </div>
+        <div id="battery2" class="fa coll-sm-6">
+        </div>
+
+    </div>
+
+    <div class="row fa">
+        <div class="col-sm-6" >
+
+
+            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
+        </div>
+        <div class="col-sm-6">
+
+
+            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
+        </div>
     </div>
 </div>
