--- a/src/app/article-index-gallery/article-index-gallery.component.html
+++ b/src/app/article-index-gallery/article-index-gallery.component.html
@@ -43,9 +43,16 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
             
             <app-new-battery></app-new-battery>
            <!-- <app-battery-section></app-battery-section> --> 
+
+
+           
             
 
 
+        </div>
+
+        <div class="row text-center">
+            <app-rotazione-volante></app-rotazione-volante>
         </div>
 
         <script src="../../assets/js/battery.js"></script>
