--- a/src/app/map-section/map-section.component.html
+++ b/src/app/map-section/map-section.component.html
@@ -5,7 +5,7 @@
     <h1 id="#" class="banner-font">Mappa</h1>
     <div id="mapdiv" class="col-sm-12"></div>
 
-    <button id="setUp1"  (click)="move()">Logout</button>
+    <button class="btn" type="button" (click)="move()"><span class="spanBar">MoveTest</span></button>
     <button  id="setUp" (click)="setUpMap()">Click to start map</button>
 
 </div>
