--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -3,26 +3,33 @@
 
     <div class="row">
 
-        <h1 id="lvlBattery" class="banner-font">Batteria</h1>
-        <div id="battery" class="fa coll-sm-6">
+        <div class="col-sm-3">
+            <h1 class="banner-font">HighVolt: </h1>
         </div>
-        <div id="battery2" class="fa coll-sm-6">
+        <div class="col-sm-3">
+            <h1 class="banner-font" [textContent]="dataHV + '%'"></h1>
         </div>
+        <div class="col-sm-3">
+            <h1 class="banner-font">LowVolt: </h1>
+        </div>
+        <div class="col-sm-3">
+            <h1 class="banner-font" [textContent]="dataLV + '%'"></h1>
+        </div>
+
+
+        <div id="battery" ></div>
+        <div id="battery2" ></div>
 
     </div>
 
     <div class="row fa">
         <div class="col-sm-6" >
-
-
             <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
             <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
             <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
             <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
         </div>
         <div class="col-sm-6">
-
-
             <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
