Aggiunto quadro spie e visualizzazione macchina, solo grafica

--- a/src/app/uninacorse/uninacorse.component.html
+++ b/src/app/uninacorse/uninacorse.component.html
@@ -47,7 +47,7 @@
         <section class="main-container" id="main-container">
 
             
-            <app-section-banner></app-section-banner>
+           <!--<app-section-banner></app-section-banner>--> 
 
             <app-nav-bar></app-nav-bar>
 
