Tentativo recupero commit

--- a/src/app/article-index-gallery/article-index-gallery.component.html
+++ b/src/app/article-index-gallery/article-index-gallery.component.html
@@ -37,15 +37,13 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
 
         <div class="row">
 
-            <app-map-section></app-map-section>
-            
-            <app-speedometer-section></app-speedometer-section>
-            
-            <app-new-battery></app-new-battery>
-           <!-- <app-battery-section></app-battery-section> --> 
+            <app-map-section class="sm-col-4"></app-map-section>
 
+            <app-speedometer-section class="sm-col-4"></app-speedometer-section>
 
-           
+            <app-bars-section class="sm-col-4"></app-bars-section>
+
+            <app-new-battery class="sm-col-4"></app-new-battery>
             
 
 
