Aggiunto comp barre sulla vista (da sistemare) rimosso old batt

--- a/src/app/bars/bars.component.html
+++ b/src/app/bars/bars.component.html
@@ -1,1 +1,12 @@
-<p>bars works!</p>
+<div class="col-sm-4">
+
+    <div class="percentage">
+        <li>
+            <h3 id="headerThrottle">Throttle</h3><span class="bar-acc"><span id="Throttle"></span></span>
+        </li>
+
+        <li>
+            <h3 id="headerBreak">Break</h3><span class="bar-fren"><span id="Break"></span></span>
+        </li>
+    </div>
+</div>
