--- a/src/app/article-index-gallery/article-index-gallery.component.html
+++ b/src/app/article-index-gallery/article-index-gallery.component.html
@@ -36,11 +36,11 @@ integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/
     <div class="container-fluid">
 
         <div class="row">
-            <app-map-section class="sm-col-4"></app-map-section>
+            <app-map-section></app-map-section>
 
-            <app-speedometer-section class="sm-col-4"></app-speedometer-section>
+            <app-speedometer-section></app-speedometer-section>
 
-            <app-new-battery class="sm-col-4"></app-new-battery>
+            <app-new-battery></app-new-battery>
 
 
         </div>
