--- a/src/app/visionemacchina/visionemacchina.component.css
+++ b/src/app/visionemacchina/visionemacchina.component.css
@@ -1,12 +1,12 @@
-.car{
-    
-    
 
-}
 
 .btn.empty{
     
     background-color: transparent;
+}
+
+.btn.empty:hover{
+  background-color: transparent;
 }
 
 
