Aggiornato component rotazione-volante con funzionalità di Angular

--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -24,16 +24,16 @@
 
     <div class="row fa">
         <div class="col-sm-6" >
-            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn " type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">T.Media</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">Tensione</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">Corrente</span></button>
+
         </div>
         <div class="col-sm-6">
-            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">MoveTest</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">T.Media</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">Tensione</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">Corrente</span></button>
+
         </div>
     </div>
 </div>
