Aggiunta prima parte storico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </object>
 <h3>Benvenuto</h3>
   <button (click)="mostra()" routerLink="uninacorse">Mostra BOX</button>
-  <button (click)="mostraStorico()">Storico</button>
+  <button (click)="mostraStorico()" routerLink="storico">Storico</button>
   <button (click)="logout()">Logout</button>
 </div>
 
