addibrerie localiOpenLayers per mappa,agg. storico

--- a/src/app/map-section/map-section.component.html
+++ b/src/app/map-section/map-section.component.html
@@ -1,7 +1,7 @@
-<head><script src="https://www.openlayers.org/api/OpenLayers.js"></script>
-    <script src="../../assets/js/OpenLayers.js"></script></head>
+
 
 <div class="col-sm-4 ">
+    <img id="carica">
     <h1 id="#" class="banner-font">Mappa</h1>
     <div id="mapdiv" class="col-sm-12"></div>
 
@@ -10,5 +10,3 @@
 
 </div>
 
-<script src="https://www.openlayers.org/api/OpenLayers.js"></script>
-<script src="../../assets/js/OpenLayers.js"></script>
