--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,51 +1,33 @@
 <nav class="navbar navbar-default">
+    <a class="navbar-brand" href="#">
+        <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="">
+        <strong class="banner-font">Unina Corse</strong>
+    </a>
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">UninaCorse</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
             <ul class="nav navbar-nav">
-                <li class=""><a href="index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="sections-font" [style]="inFirstPage">
+                    <a href="index.html"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">Info <span class="caret"></span></a>
-
-                    <ul class="dropdown-menu">
-                        <li><a href="">Info</a></li>
-                        <li><a href="">Info</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="">Info</a></li>
-                    </ul>
+                <li class="sections-font" [style]="inSecondPage">
+                    <a href="index.html"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
                 </li>
-
-
-
+                <li class="sections-font" [style]="inThirdPage">
+                    <a href="index.html"><b>Tracciato</b><span class="sr-only">(current)</span></a>
+                </li>
+                <li class="sections-font" [style]="inFourthPage">
+                    <a href="index.html"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
+                </li>
+                <li class="sections-font" [style]="inFifthPage">
+                    <a href="index.html"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Chi siamo</a></li>
-                <li><a href="">Contatti</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">Seguici<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li role="separator" class="divider"></li>
-                    </ul>
-                </li>
+                <li><a href="">Optional</a></li>
+                <li><a href="">Optional</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+    </div>
 </nav>
