--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -3,18 +3,24 @@
 
     <div class="row">
 
-        <div class="col-sm-3">
-            <h1 class="banner-font">HighVolt: </h1>
+        <div class="box-battery">
+
+            <div class="col-sm-3">
+                <h1 class="banner-font">HV: </h1>
+            </div>
+            <div class="col-sm-3">
+                <h1 class="banner-font" [textContent]="dataHV + '%'"></h1>
+            </div>
+            <div class="col-sm-3">
+                <h1 class="banner-font">LV: </h1>
+            </div>
+            <div class="col-sm-3">
+                <h1 class="banner-font" [textContent]="dataLV + '%'"></h1>
+            </div>
+
         </div>
-        <div class="col-sm-3">
-            <h1 class="banner-font" [textContent]="dataHV + '%'"></h1>
-        </div>
-        <div class="col-sm-3">
-            <h1 class="banner-font">LowVolt: </h1>
-        </div>
-        <div class="col-sm-3">
-            <h1 class="banner-font" [textContent]="dataLV + '%'"></h1>
-        </div>
+
+        
 
 
         <div id="battery" ></div>
