--- a/src/app/rotazione-volante/rotazione-volante.component.html
+++ b/src/app/rotazione-volante/rotazione-volante.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-4">
 
-    <h1 id="degrees" class="banner-font" [textContent]="'Volante: ' + gradi + '°'"></h1>
+    <h1 id="degrees" class="banner-font">Volante: {{gradi |number:'1.1-1'}}°</h1>
     <img id="volante" class="image sotto" src="../../assets/img/volante.png" alt="" width="220" height="220"
-         style="transition-duration: 0.01s" [style.transform]="rotation" >
+         [style.transform]="rotation">
     <img id="cerchio" class="image sopra" src="../../assets/img/cerchio.png" alt="" width="220" height="220">
 </div>
