--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,19 +8,19 @@
 
             <ul class="nav navbar-nav">
                 <li class="sections-font" [style]="inFirstPage">
-                    <a href="index.html"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/uninacorse" routerLinkActive="routerActive"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font" [style]="inSecondPage">
-                    <a href="index.html"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font" [style]="inThirdPage">
-                    <a href="index.html"><b>Tracciato</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font" [style]="inFourthPage">
-                    <a href="index.html"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font" [style]="inFifthPage">
-                    <a href="index.html"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
                 </li>
             </ul>
 
