--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -75,7 +75,7 @@ li > p{
     padding: 0;
     box-sizing: border-box;
     margin-left: 40px;
-    width: 300px;
+    width: 90%;
 
     border-bottom: 20px solid #03a9f4;
 
@@ -119,7 +119,7 @@ li > p{
 
     list-style: none;
     padding: 10px;
-    width: 300px;
+    width: 100%;
     background: #fff;
     box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
     transition: transform 0.5s;
@@ -134,7 +134,7 @@ li > p{
 .box ul li:hover{
     
 
-    transform: scale(1.1);
+    transform: scale(1.01);
     z-index: 100;
     background: #25bcff;
     box-shadow: 0 5px 25px rgba(0, 0, 0, .2);
