--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,19 +7,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav">
-                <li class="sections-font" [style]="inFirstPage">
+                <li class="sections-font">
                     <a routerLink="/uninacorse" routerLinkActive="routerActive"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font" [style]="inSecondPage">
+                <li class="sections-font">
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font" [style]="inThirdPage">
+                <li class="sections-font">
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font" [style]="inFourthPage">
+                <li class="sections-font">
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font" [style]="inFifthPage">
+                <li class="sections-font">
                     <a routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
                 </li>
             </ul>
