--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -30,21 +30,18 @@
             </div>
 
         </div>
-
-        
-
-    
-
+        <div class="button_div">
+            <button>Annulla</button>
+            <button id="btnCaricaDate" (click)="getDate()">Mostra date </button>
+            <button id="btnAvanti" (click)="aggiungiData()">Conferma selezione</button>
+            <button id="btnJson" (click)="creaJson()">Mostra sensori</button>
+            <button id="btnConfermaID" (click)="aggiungiID()">Conferma selezione ID</button>
+            <button id="btnJsonID" (click)="creaJsonID()">Mostra valori sensori</button>
+        </div>
     </div>
     
     
-    <div class="button_div">
-        <button>Annulla</button>
-        <button id="btnAvanti" (click)="aggiungiData()">Conferma selezione</button>
-        <button id="btnJson" (click)="creaJson()">Mostra sensori</button>
-        <button id="btnConfermaID" (click)="aggiungiID()">Conferma selezione ID</button>
-        <button id="btnMostraValID" (click)="creaJson()">Mostra valori sensori</button>
-    </div>
+    
 
 </body>
 
