--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -10,6 +10,7 @@
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="https://kit.fontawesome.com/f6b29a4c68.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body class="bodyStorico">
@@ -22,23 +23,40 @@
     <div class="row">
 
         <div class="col">
+        
+            <div class="scrollable">
 
-            <div id="box" class="box">
-                <h2 id="titleBox">Seleziona istanti di tempo</h2>
-                <ul id="listaDate">
-                    </ul>
+                <div id="box" class="box">
+                    <h2 id="titleBox">Seleziona ID sensori</h2>
+                    <ul id="listaDate">
+                        </ul>
+                </div>
+
             </div>
+
+            
+
+            <div class="col-md-12" id="grafici">
+                
+            </div>
+
+            
 
         </div>
         <div class="button_div">
             <button>Annulla</button>
-            <button id="btnCaricaDate" (click)="getDate()">Mostra date </button>
-            <button id="btnAvanti" (click)="aggiungiData()">Conferma selezione</button>
-            <button id="btnJson" (click)="creaJson()">Mostra sensori</button>
-            <button id="btnConfermaID" (click)="aggiungiID()">Conferma selezione ID</button>
-            <button id="btnJsonID" (click)="creaJsonID()">Mostra valori sensori</button>
+            <button id="btnCaricaDate" (click)="getID()">Mostra ID </button>
+            <button id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
+            <button id="btnJson" (click)="startPlot()">Mostra grafici sensori</button>
+            <button id="btnConfermaID" (click)="mostraPlotUniti()">Mostra grafico generale</button>
+            <div id="idPerPlot">
+                <p>Seleziona ID su grafico generale</p>
+                <ul id="idPlot"></ul>
+            </div>
         </div>
     </div>
+
+  
     
     
     
