--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -138,7 +138,6 @@ li > p{
 .box ul:hover li{
    
 
-    opacity: 0.2;
 }
 
 .box ul li:hover{
@@ -172,6 +171,11 @@ li > p{
     font-weight: 600;
 
     transform: translateY(-2px);
+}
+
+.box ul li select{
+    opacity: 1;
+    color: blue;
 }
 
 .box ul li:hover span
