--- a/src/app/gforce-section/gforce-section.component.css
+++ b/src/app/gforce-section/gforce-section.component.css
@@ -70,10 +70,9 @@
 
 
 .btn {
-    position: relative;
-
+    position: absolute;
     display: block;
-    margin: 0px auto;
+    margin: 5px auto;
     padding: 0;
 
     overflow: hidden;
@@ -93,9 +92,9 @@
     background-color: #27ae60;
 }
 
-.btn > * {
+/*.btn > * {
     position: relative;
-}
+}*/
 
 .btn span {
     display: block;
@@ -105,7 +104,7 @@
 .btn:before {
     content: "";
 
-    position: absolute;
+    /*position: absolute;*/
     top: 50%;
     left: 50%;
 
