--- a/src/app/speedometer-section/speedometer-section.component.html
+++ b/src/app/speedometer-section/speedometer-section.component.html
@@ -8,4 +8,4 @@
     <app-bars-section></app-bars-section>
 
 </div>
-<!--<app-gforce-section></app-gforce-section>-->
+<app-gforce-section></app-gforce-section>
