--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -56,7 +56,7 @@ button{
 
 }
 
-ul#idPlot li{
+label ul#idPlot li{
     display: inline;
 }
 
@@ -64,6 +64,11 @@ li > p{
     display: inline;
 }
 
+.overlay{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
 
 .bodyStorico{
     margin: 0;
@@ -75,6 +80,7 @@ li > p{
     min-height: 100vh;
     background: #666666;*/
     background-color: gray;
+    overflow: hidden;
 
 }
 
