--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -11,16 +11,18 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="https://kit.fontawesome.com/f6b29a4c68.js" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </head>
 
 <body class="bodyStorico">
+
     <app-nav-bar></app-nav-bar>
 
     <div class="load" id="load">
 
     </div>
 
-    <div class="row">
+    <div class="row" id="rowListaID">
 
         <div class="col">
         
@@ -34,26 +36,55 @@
 
             </div>
 
+        </div>
+        
+    </div>
+
+    
+
+    <div class="row" id="rowFiltri" style="border:  black; border-style: dotted; padding: 10px;">
+
+        <h2 class="text-center">Filtraggio grafici</h2> 
+
+        <div class="col" id="filtri">
             
 
-            <div class="col-md-12" id="grafici">
-                
+            <div id="Aggiorna tempo">
+                <label>Scegli giorno</label><input type="date" id="giornoInizioGenerale"> <label>Scegli ora inizio:</label><input type="time" id="oraInizioGenerale" step="2"/>
+                <label>Scegli ora fine:</label>  <input type="time" id="oraFineGenerale" step="2"/>
             </div>
 
             
 
+            <div id="idPerPlot">
+                <label>Seleziona ID su grafico generale</label>
+                <ul id="idPlot"></ul>
+            </div>
+            
+
         </div>
+
+    </div>
+
+    <div class="row" id="rowButtons">
+
         <div class="button_div">
             <button>Annulla</button>
             <button id="btnCaricaDate" (click)="getID()">Mostra ID </button>
             <button id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
             <button id="btnJson" (click)="startPlot()">Mostra grafici sensori</button>
             <button id="btnConfermaID" (click)="mostraPlotUniti()">Mostra grafico generale</button>
-            <div id="idPerPlot">
-                <p>Seleziona ID su grafico generale</p>
-                <ul id="idPlot"></ul>
-            </div>
+            
         </div>
+
+    </div>
+
+    <div class="row" id="rowGrafici">
+
+        <div class="col-md-12" id="grafici">
+                
+        </div>
+
     </div>
 
   
