Risolto bug grafico generale, effettuati aggiustamenti generali

--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -42,7 +42,7 @@
 
     
 
-    <div class="row" id="rowFiltri" style="border:  black; border-style: dotted; padding: 10px;">
+    <div class="row" id="rowFiltri" style="border:  black; border-style: dotted; padding: 10px;" id="filtraggio">
 
         <h2 class="text-center">Filtraggio grafici</h2> 
 
