--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -1,7 +1,7 @@
 
 .scrollable{
 
-    height: 200px;
+    height: 300px;
     width: 95%;
     overflow: auto;
 }
@@ -33,7 +33,7 @@ button{
 
 .button_div button{
     
-    background: #03a9f4;
+    background: #6b7203;
     color: #fff;
     border: 0px;
     border-radius: 5px;
@@ -70,6 +70,10 @@ li > p{
     background-color: white;
 }
 
+html{
+    height: 100%;
+}
+
 .bodyStorico{
     margin: 0;
     padding: 0;
@@ -77,8 +81,9 @@ li > p{
     /*display: flex;*/
     /*justify-content: center;*/
    /* align-items: center;
-    min-height: 100vh;
+    
     background: #666666;*/
+    min-height: 100vh;
     background-color: gray;
     overflow: hidden;
 
@@ -92,8 +97,8 @@ li > p{
     margin-left: 40px;
     margin-right: 40px;
     width: 90%;
+    height: 50%;
 
-    border-bottom: 20px solid #03a9f4;
 
     
     border-bottom-left-radius: 10px;
@@ -107,7 +112,7 @@ li > p{
     box-sizing: border-box;
 
     color: #fff;
-    background: #03a9f4;
+    background: #000000;
     padding: 10px 20px;
     font-size: 20px;
     font-weight: 700;
@@ -123,7 +128,7 @@ li > p{
     box-sizing: border-box;
 
     position: relative;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.575);
 
 }
 
@@ -136,7 +141,7 @@ li > p{
     list-style: none;
     padding: 10px;
     width: 100%;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.575);
     box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
     transition: transform 0.5s;
 }
@@ -151,7 +156,7 @@ li > p{
 
     transform: scale(1.01);
     z-index: 100;
-    background: #25bcff;
+    background: #6b7203;
     box-shadow: 0 5px 25px rgba(0, 0, 0, .2);
     color: #fff;
 
