--- a/src/app/map-section/map-section.component.html
+++ b/src/app/map-section/map-section.component.html
@@ -1,5 +1,5 @@
-<div class="col-sm-4 ">
-    <img id="carica">
+<div class="col-sm-4">
+    <!--<img id="carica">-->
     <h1 id="#" class="banner-font">Mappa</h1>
-    <div id="mapdiv" class="col-sm-12"></div>
+    <div id="mapdiv" style="max-height: 400px"></div>
 </div>
