--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-4" style="border:  black; border-style: dotted; padding: 10px;">
+<!--<div  style="border:  black; border-style: dotted; padding: 10px;">
 
     <h1 id="spieControllo" class="banner-font">Spie di controllo</h1>
     <div class="col-sm-6">
@@ -22,4 +22,40 @@
          <button class="btn red" type="button"><span class="spanBar">50°</span></button>
     </div>
     
+</div>-->
+<div class="container-fluid" style="border:  black; border-style: dotted; padding: 10px;position: relative; margin-top: -130px;">
+    <div class="row">
+        <div class="col-sm-6 col-md-offset-3">
+            <h1 id="spieControllo" class="banner-font">Spie di Controllo</h1>
+        </div>
+    </div>
+    <div class="row" style="position: relative; top: -30px">
+        <div class="col-lg-2 col-lg-offset-1">
+            <button id="BMS"class="button">BMS</button>
+        </div>
+        <div class="col-lg-2">
+            <button id="TRQ"class="button">TRQ</button>
+        </div>
+        <div class="col-lg-2">
+            <button id="ECU"class="button">ECU</button>
+        </div>
+        <div class="col-lg-2">
+            <button id="OH"class="button">OH</button>
+        </div>
+        <div class="col-lg-2">
+            <button id="TCS"class="button">TCS</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <h1 class="banner-font-small">T. Freno:</h1>
+            <button class="btn " type="button"><span class="spanBar">N.S.</span></button>
+        </div>
+        <div class="col-sm-4">
+            ugo
+        </div>
+        <div class="col-sm-4">
+            ugo
+        </div>
+    </div>
 </div>
