--- a/src/app/visionemacchina/visionemacchina.component.css
+++ b/src/app/visionemacchina/visionemacchina.component.css
@@ -146,3 +146,8 @@
       padding-left: 30px;
       padding-right: 30px;
   }
+  .spanSing{
+      font-size: 18px;
+      padding-left: 30px;
+      padding-right: 30px;
+  }
