--- a/src/app/visionemacchina/visionemacchina.component.html
+++ b/src/app/visionemacchina/visionemacchina.component.html
@@ -1,13 +1,14 @@
-<div class="col-sm-4 text-center" >
+<div style="position:relative; top: -130px">
+    <div class="col-sm-4 text-center" >
 
     <div class="col-sm-4">
         
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanBar">25°</span></button>
+        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng1}}°C</span><span class="spanSing inv">IGBT: {{tempIgbt1}}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanBar">25°</span></button>
+        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng3}}°C</span><span class="spanSing inv">IGBT: {{tempIgbt3}}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
 
 
@@ -18,13 +19,14 @@
     </div>
     <div class="col-sm-4">
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanBar">25°</span></button>
+        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng2}}°C</span><span class="spanSing inv">IGBT: {{tempIgbt2}}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanBar">25°</span></button>
+        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng4}}°C</span><span class="spanSing inv">IGBT: {{tempIgbt4}}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
 
     </div>
 
+</div>
 </div>
