--- a/src/app/new-battery/new-battery.component.css
+++ b/src/app/new-battery/new-battery.component.css
@@ -7,12 +7,11 @@
   #battery{
     transform: rotate(-90deg);
     position: absolute;
-    left: 50%;
-    top: 30%;
-    width: 250px;
+
+    width: 200px;
     height: 120px;
-    margin-left: -252px;
-    margin-top: +240px;
+    margin-left: -38px;
+    margin-top: +80px;
     border-radius: 10px/30px;
     border-left: 2px solid rgba(255,255,255,0.2);
     border-right: 2px solid rgba(255,255,255,0.2);
@@ -45,7 +44,7 @@
       display: block;
       position: absolute;
       content: '';
-      width: 220px;
+      width: 170px;
       height: 120px;
       left: 10px;
       border-radius: 5px/30px;
@@ -62,12 +61,10 @@
   #battery2{
     transform: rotate(-90deg);
     position: absolute;
-    left: 50%;
-    top: 30%;
-    width: 230px;
+    width: 170px;
     height: 100px;
-    margin-left: -50px;
-    margin-top: +240px;
+    margin-left: -20px;
+    margin-top: +95px;
     border-radius: 10px/30px;
     border-left: 2px solid rgba(255,255,255,0.2);
     border-right: 2px solid rgba(255,255,255,0.2);
@@ -100,7 +97,7 @@
       display: block;
       position: absolute;
       content: '';
-      width: 200px;
+      width: 150px;
       height: 100px;
       left: 10px;
       border-radius: 5px/30px;
@@ -202,6 +199,19 @@
 }
 
 .bottom{
+  width: 80px;
+  margin-left: 25px;
+}
 
-  margin-left: 20px;
+.title{
+    font-family: Impact;
+    font-size: 34px;
+}
+.box{
+    position: relative;
+    top: 13px;
+    left: 53px;
+}
+.inBox{
+    position: relative;
 }
