--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -1,45 +1,31 @@
-<head></head>
-<div class="col-sm-4 flex-column container">
-
+<div class="box">
     <div class="row">
-
-        <div class="box-battery">
-
-            <div class="col-sm-3">
-                <h1 class="banner-font">HV: </h1>
+        <div class="col">
+            <div class="title">
+                <span>HighVoltage &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; LowVoltage</span>
             </div>
-            <div class="col-sm-3">
-                <h1 class="banner-font" [textContent]="dataHV + '%'"></h1>
-            </div>
-            <div class="col-sm-3">
-                <h1 class="banner-font">LV: </h1>
-            </div>
-            <div class="col-sm-3">
-                <h1 class="banner-font" [textContent]="dataLV + '%'"></h1>
-            </div>
-
         </div>
-
-        
-
-
-        <div id="battery" ></div>
-        <div id="battery2" ></div>
-
     </div>
-
-    <div class="row fa">
-        <div class="col-sm-6" >
-            <button class="btn bottom" type="button"><span class="spanBar">T.Media</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">Tensione</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">Corrente</span></button>
-
+    <div class="row">
+        <div class="col-sm-5" style="margin-top: 10px">
+            <button class="btn bottom" type="button"><span class="spanBar">T.Media&nbsp;&nbsp;</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4" style="margin-top: 10px">
             <button class="btn bottom" type="button"><span class="spanBar">T.Media</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">Tensione</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">Corrente</span></button>
-
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <div id="battery"></div>
+        </div>
+        <div class="col-sm-4">
+            <div id="battery2"></div>
         </div>
     </div>
 </div>
