--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -1,3 +1,56 @@
+/*Inizio loader*/
+
+.overlay {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: #222;
+}
+
+.overlay__inner {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.overlay__content {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.spinner {
+    width: 75px;
+    height: 75px;
+    display: inline-block;
+    border-width: 2px;
+    border-color: rgba(255, 255, 255, 0.05);
+    border-top-color: #fff;
+    animation: spin 1s infinite linear;
+    border-radius: 100%;
+    border-style: solid;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+
+  
+}
+
+/*Fine loader*/
+
+.bodyStorico .load{
+    text-align: center;
+}
+
 
 .scrollable{
 
@@ -64,11 +117,7 @@ li > p{
     display: inline;
 }
 
-.overlay{
-    width: 100%;
-    height: 100%;
-    background-color: white;
-}
+
 
 html{
     height: 100%;
@@ -194,4 +243,10 @@ html{
    /* background: #fff;
     color:#25bcff;*/
 
+}
+
+.banner-font{
+
+    font-family: Impact;
+    
 }
