--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -18,7 +18,16 @@
 
     <app-nav-bar></app-nav-bar>
 
-    <div class="load" id="load">
+    <div class="overlay" id="loader">
+    <div class="overlay__inner">
+        <div class="overlay__content"><span class="spinner"></span></div>
+    </div>
+    </div>
+
+    <div class="load" id="topText">
+
+        <h1 class="banner-font">Storico</h1>
+        <h1 class="banner-font">Clicca "mostra ID" per iniziare</h1>
 
     </div>
 
