Aggiunto supporto dei service alla mappatura dei sensori... Adesso il codice è completamente indipendente dall'id dei sensori Aggiunti alcuni sensori.

--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -52,10 +52,12 @@
             <button class="btn " type="button"><span class="spanBar">N.S.</span></button>
         </div>
         <div class="col-sm-4">
-            ugo
+            <h1 class="banner-font-small">P.Freni:</h1>
+            <button class="btn " type="button"><span class="spanBar">{{breakPressure}}°C</span></button>
         </div>
         <div class="col-sm-4">
-            ugo
+            <h1 class="banner-font-small">T.Liquid:</h1>
+            <button class="btn " type="button"><span class="spanBar">{{breakPressure}}°C</span></button>
         </div>
     </div>
 </div>
