--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -8,13 +8,13 @@
     </div>
     <div class="row">
         <div class="col-sm-5" style="margin-top: 10px">
-            <button class="btn bottom" type="button"><span class="spanBar">T.Media&nbsp;&nbsp;</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV}}°C</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
         </div>
         <div class="col-sm-4" style="margin-top: 10px">
-            <button class="btn bottom" type="button"><span class="spanBar">T.Media</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV}}°C</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
