--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -51,7 +51,7 @@
 
     
 
-    <div class="row" id="rowFiltri" style="border:  black; border-style: dotted; padding: 10px;" id="filtraggio">
+    <div class="row" id="rowFiltri" style="border:  black; border-style: dotted; padding: 10px; margin-top: 15px;" id="filtraggio">
 
         <h2 class="text-center">Filtraggio grafici</h2> 
 
@@ -59,30 +59,45 @@
             
 
             <div id="Aggiorna tempo">
-                <label>Scegli giorno</label><input type="date" id="giornoInizioGenerale"> <label>Scegli ora inizio:</label><input type="time" id="oraInizioGenerale"  step="2"/>
-                <label>Scegli ora fine:</label>  <input type="time" id="oraFineGenerale" step="2"/>
+                <label class="dataPickerInput">Scegli giorno</label>
+                <!--<input type="date" id="giornoInizioGenerale"> -->
+                <mat-form-field class="labelStyle">
+                    <mat-label class="labelStyle">Scegli giorno</mat-label>
+                    <input matInput #dateInput [matDatepicker]="picker" id="test" class="dataPickerInput"> 
+                    <mat-datepicker-toggle matSuffix [for]="picker" class="dataPickerInput"></mat-datepicker-toggle>
+                    <mat-datepicker #picker class="dataPickerInput"></mat-datepicker> 
+                  </mat-form-field> 
+                
+                
+                
+                <label  class="labelStyle">Scegli ora inizio:</label><input type="time" id="oraInizioGenerale"  step="2"/>
+                <label class="labelStyle">Scegli ora fine:</label>  <input type="time" id="oraFineGenerale" step="2"/>
             </div>
 
             
 
             <div id="idPerPlot">
-                <label>Seleziona ID su grafico generale</label>
-                <ul id="idPlot"></ul>
+                <label  class="labelStyle">Seleziona ID su grafico generale</label>
+                <ul id="idPlot" class="idPlot"></ul>
             </div>
             
 
         </div>
 
     </div>
+    
 
     <div class="row" id="rowButtons">
 
+        
+
         <div class="button_div">
-            <button>Annulla</button>
-            <button id="btnCaricaDate" (click)="getID()">Mostra ID </button>
-            <button id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
-            <button id="btnJson" (click)="startPlot()">Mostra grafici sensori</button>
-            <button id="btnConfermaID" (click)="mostraPlotUniti()">Mostra grafico generale</button>
+            
+            <button mat-raised-button color="primary">Annulla</button>
+            <button mat-raised-button color="primary" id="btnCaricaDate" (click)="getID()">Mostra ID </button>
+            <button mat-raised-button color="primary" id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
+            <button mat-raised-button color="primary" id="btnJson" (click)="startPlot()">Mostra grafici sensori</button>
+            <button mat-raised-button color="primary" id="btnConfermaID" (click)="mostraPlotUniti()">Mostra grafico generale</button>
             
         </div>
 
